# project_game2d

./: Boss.cpp  Boss.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Collectible.cpp  Collectible.h  Destructible.cpp  Destructible.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  RangedWpn.cpp  RangedWpn.h  Staff.cpp  Staff.h  Talisman.cpp  Talisman.h  Talismans.cpp  Talismans.h  Weapon.cpp  Weapon.h  WeaponManager.cpp  WeaponManager.h  attackMove.cpp  attackMove.h  main.cpp  meleeEnemy.cpp  meleeEnemy.h  rangedEnemy.cpp  rangedEnemy.h  renderManager.cpp  renderManager.h  scoreManager.cpp  scoreManager.h  vmath.cpp  vmath.h
assets/shaders/: sliderShader.frag
maps/: Map.cpp  Map.h
